[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scenes/MainMenu/Settings.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/CardTable/Art/TEs/Hexagon.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/MainMenu/CellSelection.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/MainMenu/CharacterSelection.gd" type="Script" id=4]
[ext_resource path="res://Assets/Fonts/OpenSans-Bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/Images/pngs/SpeechRectLeft.png" type="Texture" id=6]
[ext_resource path="res://Assets/Fonts/OpenSans-Light.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Scenes/MainMenu/ResourceSettings.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/Fonts/OpenSans-Bold.ttf"

[sub_resource type="DynamicFont" id=2]
size = 48
use_mipmaps = true
use_filter = true
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=4]
content_margin_top = 10.0
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=5]
size = 20
use_filter = true
font_data = ExtResource( 5 )

[node name="CharacterSelection" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
margin_right = 1600.0
margin_bottom = 900.0
color = Color( 0.168627, 0.0588235, 0.470588, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoToGame" type="Button" parent="."]
margin_left = 1157.27
margin_top = 732.0
margin_right = 1546.27
margin_bottom = 847.0
custom_fonts/font = SubResource( 2 )
text = "Start the Game!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsLabel" type="RichTextLabel" parent="."]
margin_left = 1200.0
margin_top = 10.0
margin_right = 1508.0
margin_bottom = 103.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center][u]Settings[/u][/center]"
text = "Settings"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="RichTextLabel" parent="."]
margin_left = 456.0
margin_top = 40.0
margin_right = 1134.0
margin_bottom = 236.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "Cell Name: Description"
text = "Cell Name: Description"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CellSelection" parent="." instance=ExtResource( 3 )]
anchor_top = -0.5
anchor_right = 10.05
anchor_bottom = 22.5
margin_top = 20.0
margin_bottom = -6.10352e-05

[node name="Panel" type="Panel" parent="."]
margin_left = 1200.0
margin_top = 100.0
margin_right = 1508.0
margin_bottom = 649.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Settings" parent="Panel" instance=ExtResource( 1 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0

[node name="CharTE" parent="." instance=ExtResource( 2 )]
margin_left = 437.867
margin_top = 368.796
margin_right = 397.867
margin_bottom = 328.796
rect_scale = Vector2( 2, 2 )

[node name="CharSpeech" type="TextureRect" parent="CharTE"]
margin_left = 10.0
margin_top = -81.0
margin_right = 378.0
margin_bottom = 16.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="CharTE/CharSpeech"]
anchor_left = 0.0461957
anchor_top = 0.0927835
anchor_right = 0.967391
anchor_bottom = 0.659794
custom_styles/normal = SubResource( 4 )
custom_fonts/bold_font = SubResource( 5 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_constants/table_vseparation = 0
bbcode_enabled = true
bbcode_text = "[center][b]Select your single cell life form![/b][/center]"
text = "Select your single cell life form!"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ResourceSettings" parent="." instance=ExtResource( 8 )]
margin_left = 798.0
margin_top = 399.0
margin_right = 1118.0
margin_bottom = 835.0

[node name="Save" type="Button" parent="."]
margin_left = 800.0
margin_top = 847.0
margin_right = 947.0
margin_bottom = 890.0
text = "Save Current Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Load" type="Button" parent="."]
margin_left = 972.0
margin_top = 847.0
margin_right = 1119.0
margin_bottom = 890.0
text = "Load Default Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Load File" type="Button" parent="."]
margin_left = 628.0
margin_top = 847.0
margin_right = 775.0
margin_bottom = 890.0
text = "Load File"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="."]
margin_left = 420.0
margin_top = 244.0
margin_right = 1153.0
margin_bottom = 593.0
rect_min_size = Vector2( 400, 140 )
window_title = "Open a File"
mode = 0
access = 2
filters = PoolStringArray( "*.txt ; Text Files" )
current_dir = "/"
current_path = "/"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="GoToGame" to="." method="_on_GoToGame_pressed"]
[connection signal="cell_changed" from="CellSelection" to="." method="_on_CellSelection_cell_changed"]
[connection signal="pressed" from="Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="Load File" to="." method="_on_Load_File_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
